--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ android-targetSdk = "36"
 kotlin = "2.3.10"
 kotlinx-coroutines = "1.10.2"
 
-androidx-activity = "1.12.3"
+androidx-activity = "1.12.4"
 androidx-core = "1.17.0"
 androidx-lifecycle = "2.9.6"
 
@@ -21,7 +21,7 @@ junit = "4.13.2"
 vanniktechMavenPublish = "0.36.0"
 
 ravenzip-krex = "0.1.0"
-ravenzip-kotlinReactiveForms = "0.1.1"
+ravenzip-kotlinReactiveForms = "0.2.0"
 
 [libraries]
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
@@ -43,7 +43,7 @@ androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 
 ravenzip-krex-core = { module = "com.github.RavenZIP.krex:core", version.ref = "ravenzip-krex" }
-ravenzip-kotlinReactiveForms-core = { module = "com.github.RavenZIP.kotlin-reactive-forms:core", version.ref = "ravenzip-kotlinReactiveForms" }
+ravenzip-kotlinReactiveForms-core = { module = "com.github.RavenZIP.kotlin-reactive-forms:krf-core", version.ref = "ravenzip-kotlinReactiveForms" }
 
 [plugins]
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
